<resources>
    <string name="app_name">Trippie</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_to_trippie">Welcome To Trippie!</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="join_us">Join Us!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_in_button">Sign in</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up now</string>
    <string name="my_trips">My Trips</string>
    <string name="edit_your_trip">Edit your trip</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_city">Enter City</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_description">Enter Description</string>
    <string name="delete_image">Delete Image</string>
    <string name="add_activities_for_this_trip">Add activities for this trip:</string>
    <string name="activities_here">Activities here</string>
    <string name="hotel_details">Hotel Details:</string>
    <string name="hotel_details_here">Hotel details here</string>
    <string name="save">Save</string>
    <string name="add_a_new_trip">Add a new trip</string>
    <string name="add">Add</string>
    <string name="detailed_date">Detailed date</string>
    <string name="activities">Activities</string>
    <string name="hotel_detailed">Hotel Detailed</string>
    <string name="trips">Trips</string>
    <string name="diaries">Diaries</string>
    <string name="checklist">Checklist</string>
    <string name="expenses">Expenses</string>
    <string name="package_checklist">Package Checklist</string>
    <string name="add_a_package_item">Add a package item</string>
    <string name="enter_count">Enter Count</string>
    <string name="my_diaries">My Diaries</string>
    <string name="add_diary">Add Diary</string>
    <string name="enter_title">Enter title</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="my_expenses">My Expenses</string>
    <string name="total_0_00">Total: 0.00$</string>
    <string name="add_an_expense">Add an expense</string>
    <string name="add_date">Add Date</string>
    <string name="enter_price">Enter price</string>
    <string name="edit_expense">Edit expense</string>
    <string name="price">Price</string>
    <string name="choose_currency">Choose currency:</string>
    <string name="disconnect_title">Disconnect</string>
    <string name="disconnect_are_you_sure">Are you sure you want to disconnect?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_package_title">Delete package item</string>
    <string name="delete_package_are_you_sure">Are you sure you want to delete this package item?</string>
    <string name="delete_expense_title">Delete expense</string>
    <string name="delete_expense_are_you_sure">Are you sure you want to delete this expense?</string>
    <string name="delete_trip_title">Delete trip</string>
    <string name="delete_trip_are_you_sure">Are you sure you want to delete this trip?</string>
    <string name="delete_diary_are_you_sure">Are you sure you want to delete this diary?</string>
    <string name="delete_diary_title">Delete diary</string>
    <string name="ok">Ok</string>
    <string name="location_dialog_msg">This feature needs the Location permission, please accept to use location functionality</string>
    <string name="location_dialog_title">Location Permission</string>
    <string name="diary_deleted_toast">Diary deleted</string>
    <string name="please_enter_diary_title">Please enter diary title</string>
    <string name="diary_added_toast">Diary added!</string>
    <string name="expense_added_toast">Expense added!</string>
    <string name="login_successful">Login successfull</string>
    <string name="unkown_error_occured">Unknown error occurred</string>
    <string name="registration_successful">Registration successful</string>
    <string name="passwords_dont_match">Passwords dont match</string>
    <string name="package_item_added">Package Item added!</string>
    <string name="package_item_deleted">Package Item deleted!</string>
    <string name="image_deleted">Image deleted</string>
    <string name="end_date_before_start">End date cannot be before start date</string>
    <string name="trip_Added">Trip added!</string>
    <string name="trip_deleted">Trip deleted!</string>
    <string name="location_permissions_are_not_granted">Location permissions are not granted</string>
    <string name="no_address_found">No address found</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="permission_denied">Permission denied</string>
    <string name="expense_deleted">Expense deleted</string>
    <string name="diary_saved">Diary saved!</string>
</resources>