<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/header_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_an_expense"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:padding="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_et_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <!-- TextInputEditText for country -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_country" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_et_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <!-- TextInputEditText for city -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_city" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/add_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_et_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <!-- TextInputEditText for description -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:layout_marginBottom="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/choose_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/choose_currency"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/currency_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_et_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <!-- TextInputEditText for description -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/enter_price" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/finish_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/appColor"
                android:text="@string/add" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"/>

</FrameLayout>
