<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/header_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_package_item"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:shadowRadius="2"
            android:padding="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <!-- TextInputEditText for description -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/count_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <!-- TextInputEditText for count -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/count_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_count" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/finish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appColor"
            android:text="@string/add" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
