<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:padding="12dp">
        <TextView
            android:id="@+id/add_diary_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/add_diary"
            android:textStyle="bold"
            android:textColor="@color/appColor"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/add_diary_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_title"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/add_diary_heading"
            android:background="@drawable/cyan_border"
            android:layout_marginTop="16dp"
            android:maxLines="1" />
        <EditText
            android:id="@+id/add_diary_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_description"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="18sp"
            android:background="@drawable/cyan_border"
            android:layout_below="@id/add_diary_title"
            android:layout_marginTop="12dp"
            android:lines="25"/>
    </RelativeLayout>
    </ScrollView>
</layout>
