<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Fragments.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:background="#FFFFFF"
        android:alpha="0.8">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_us"
                    android:textSize="30sp"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="3"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_sign_up_et_layout"
                    android:layout_marginTop="16dp"
                    style="@style/CustomTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:id="@+id/username_sign_up_et"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_sign_up_et_layout"
                    android:layout_marginTop="16dp"
                    style="@style/CustomTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:id="@+id/password_sign_up_et"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password_sign_up_et_layout"
                    android:layout_marginTop="16dp"
                    style="@style/CustomTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_password"
                        android:id="@+id/confirm_password_sign_up_et"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#40E0D0"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/already_have_account_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_sign_in"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"/>

            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>
