<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Fragments.SignInFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/sign_in_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:background="#FFFFFF"
        android:alpha="0.8">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/trippie_icon"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_trippie"
                    android:textSize="30sp"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="3"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"
                    android:shadowColor="@color/black"
                    android:shadowRadius="2"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_sign_in_et_layout"
                    android:layout_marginTop="16dp"
                    style="@style/CustomTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:id="@+id/email_sign_in_et"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_sign_in_et_layout"
                    android:layout_marginTop="16dp"
                    style="@style/CustomTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:id="@+id/password_sign_in_et"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_button"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#40E0D0"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/not_registered_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_sign_up"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:clickable="true"/>

            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</FrameLayout>
